vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_if_guard.vv
fn maybe(_ string) ?string {
	return ''
}

fn main() {
	'' == (if x := maybe($embed_file(@FILE).path) {
		x
	} else {
		''
	})
}
